--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,33 @@
-<ul>
-	{{#each articles}}
-		<li class="article-title">{{this.title}}</li>
-		<li class="article-link">{{this.link}}</li>
-	{{/each}}
-</ul>
+<div id="main-header-container">
+	<h1 id="main-header">News Scraper</h1>
+</div>
+
+<div id="view-articles-button-container">
+	<div id="view-articles">Click here to view articles from ReCode.net</div>
+</div>
+
+<div id="front-page" class="hidden">
+	<h2 id="newspaper-title">The Daily Coder</h2>
+	<p id="date"></p>
+	<div id="article-display">
+		<p id="article-title"></p>
+		<p id="article-link"></p>
+		<p class="dummy-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+		<p class="dummy-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+	</div>
+	<div id="front-page-footer">
+		<p class="footer-text" id="cost">Monday thru Saturday - 75&cent;<p>
+		<p class="footer-text" id="copyright">&copy; Derrick Suarez 2016</p>
+		<p class="footer-text" id="github-link"><a href="https://github.com/dsuare1/newsScraper" target="_blank">GitHub</a></p>
+	</div>
+</div>
+
+<div class="box"></div>
+
+{{!-- <div id="view-articles-button-wrapper">
+	<div id="iterate-articles">Next Article</div>
+</div> --}}
+
+{{!-- <div id="note-display">
+	<h2>Note display to go here</h2>
+</div> --}}
