--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,9 +21,10 @@ body {
 
 #main-header-container {
 	width: 50%;
-	margin: 50px auto;
+	margin: 20px auto 20px auto;
 	background-color: #2c3e50;
 	border: 5px solid #ecf0f1;
+	border-radius: 5px;
 	opacity: 0.7;
 	text-align: center;
 	padding: 1em;
@@ -47,6 +48,7 @@ body {
   height: 100px;
   color: #ccc;
   border: 5px solid #ecf0f1;
+  border-radius: 50px;
   font-size: 1.5em;
   margin-top: 4em;
   padding: 10px;
@@ -60,7 +62,7 @@ body {
 
 #view-articles::after {
   content: "";
-  border-radius: 5px;
+  border-radius: 50px;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -74,8 +76,6 @@ body {
 }
 
 #view-articles:hover {
-  -webkit-transform: scale(1.1, 1.1);
-  transform: scale(1.1, 1.1);
   cursor: pointer;
 }
 
@@ -89,9 +89,10 @@ body {
 #front-page {
 	color: #000;
 	background-color: #ffffff;
-	width: 85%;
-	margin: 0 auto;
+	width: 70%;
+	margin-left: 20px;
 	padding: 10px;
+	border-radius: 5px;
 	text-align: center;
 	max-height: 600px;
 	min-height: 450px;
@@ -114,6 +115,11 @@ body {
 #article-title {
 	font-size: 1.8em;
 	margin-bottom: 20px;
+	display: inline-block;
+}
+
+#article-title:hover {
+	cursor: pointer;
 }
 
 #article-link {
@@ -153,9 +159,70 @@ body {
 }
 /********************************************************/
 
-/*#note-display {
-	display: inline-block;
-	color: #000;
-	background-color: darkgreen;
-	width: 49%;	
-}*/
+
+/********************************************************/
+/* Note Display */
+/********************************************************/
+#note-display {
+	float: right;
+	color: #ecf0f1;
+	border-radius: 5px;
+	width: 25%;	
+	margin-right: 30px;
+	text-align: center;
+	max-height: 600px;
+	min-height: 450px;
+}
+
+#note-title {
+	background-color: #2c3e50;
+	border: 5px solid #ecf0f1;
+	border-radius: 5px;
+	opacity: 0.7;
+	text-align: center;
+	padding: 1em;
+	margin-bottom: 2em;
+}
+/********************************************************/
+
+#iterate-articles {
+  position: relative;
+  float: right;
+  width: 300px;
+  color: #ccc;
+  border: 5px solid #ecf0f1;
+  border-radius: 50px;
+  font-size: 1.5em;
+  margin-top: -3.5em;
+  margin-right: 63px;
+  padding: 10px;
+  text-align: center;
+  line-height: 1.5em;
+  background-color: #2980b9;
+  box-shadow: 0 0 2px #ccc;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+#iterate-articles::after {
+  content: "";
+  border-radius: 50px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 35px #ccc;
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+#iterate-articles:hover {
+  cursor: pointer;
+}
+
+#iterate-articles:hover::after {
+    opacity: 1;
+}
