notes saving to DB and data persisting; UI needs tweaking

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,6 +190,10 @@ body {
   font-size: 1.5em;
 }
 
+#save-note:hover {
+  cursor: pointer;
+}
+
 /********************************************************/
 /* Iterate Articles buttons container */
 /********************************************************/
