added 'rel=noopener noreferrer' to guard against phishing

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 	<div id="front-page-footer">
 		<p class="footer-text" id="cost">Monday thru Saturday - 75&cent; | Sunday $1.50<p>
 		<p class="footer-text" id="copyright">&copy; Derrick Suarez 2016</p>
-		<p class="footer-text" id="github-link"><a href="https://github.com/dsuare1/newsScraper" target="_blank">GitHub</a></p>
+		<p class="footer-text" id="github-link"><a href="https://github.com/dsuare1/newsScraper" rel="noopener noreferrer" target="_blank">GitHub</a></p>
 	</div>
 </div>
 
